# xmos_sw_usb_audio

./: README.rst
app_usb_aud_xk_216_mc/: CMakeLists.txt
app_usb_aud_xk_316_mc/: CMakeLists.txt
app_usb_aud_xk_evk_xu316/: CMakeLists.txt
app_usb_aud_xk_evk_xu316_extrai2s/: CMakeLists.txt
